[package]
name = "cutepaw"
version = "0.1.0"
authors = ["PatriotRossii <rorkh@internet.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", features = ["json"] }

futures = "0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"